[Win] Multiline mode of tooltip control does word-wrapping very slowly https://bugs.webkit.org/show_bug.cgi?id=198989

Reviewed by Ross Kirsling.

Source/WebKit:

* UIProcess/win/WebView.cpp:
(WebKit::truncatedString): Added.
(WebKit::WebView::setToolTip): Use truncatedString.

Source/WebKitLegacy/win:

* WebView.cpp:
(truncatedString): Added.
(WebView::setToolTip): Use truncatedString.

Canonical link: https://commits.webkit.org/213286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246960 268f45cc-cd09-0410-ab3c-d52691b4dbfc